Added some styling to the tags themselves, but more is needed

--- a/data/themes/default/hypha.css
+++ b/data/themes/default/hypha.css
@@ -554,9 +554,9 @@ input {
  max-width: 100%; }
 
 
- .prefix {
+ /* .prefix {
  display: none; }
-
+ */
  .language {
  display: inline-block;
  margin-right: 5px; }
@@ -928,6 +928,13 @@ body.type_peer_reviewed_article .input-wrapper.field_type_editor:not(.field_name
 .new-comment textarea{
 	width: 100%;
 	height: 100px;
+}
+
+div[class^='tagSel']{
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 3px 5px;
+    margin-bottom: 5px;
 }
 
 .selectedTags {
