--- a/data/themes/default/hypha.css
+++ b/data/themes/default/hypha.css
@@ -286,6 +286,45 @@ a.nopagelink {
  background: var(--formheaderback);
 }
 
+/* below page */
+
+.below-page{
+    border-top: 1px dotted grey;
+}
+
+#tagList .prefix{
+    margin-left: 10px;
+    margin-bottom: 5px;
+    font-size: 80%;
+}
+
+.selectedTags {
+    display: flex;
+}
+
+.selectedTags .delete-tag {
+    color: #8f0000;
+    cursor: pointer;
+}
+
+.remainingTags {
+    padding: 0;
+    font-size: 80%;
+}
+
+div[class^='tagSel']{
+    padding: 5px 10px;
+    margin-bottom: 5px;
+    background: var(--secondarycolor);
+    background: lightyellow;
+    margin-right: 10px;
+    color: white;
+    color: grey;
+    font-weight: bold;
+    font-size: 80%;
+    border-radius: 6px;
+}
+
 /* ---- Footer ---- */
 #footerContainer {
  padding-bottom: 2em;
@@ -297,8 +336,7 @@ a.nopagelink {
  float: right;
  margin: 30px 0 10px;
  padding-top: 5px;
- border-top: 1px dotted #222;
- font-size: 8pt;
+ font-size: 80%;
 }
 
 #footer {
@@ -929,27 +967,6 @@ body.type_peer_reviewed_article .input-wrapper.field_type_editor:not(.field_name
 	width: 100%;
 	height: 100px;
 }
-
-div[class^='tagSel']{
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 3px 5px;
-    margin-bottom: 5px;
-}
-
-.selectedTags {
-    display: inline-block;
-}
-
-.selectedTags .delete-tag {
-    color: #8f0000;
-    cursor: pointer;
-}
-
-.remainingTags {
-    padding: 0;
-}
-
 
 .share-links{
     width: 116px;
