--- a/data/themes/default/hypha.css
+++ b/data/themes/default/hypha.css
@@ -953,7 +953,13 @@ body.type_peer_reviewed_article .input-wrapper.field_type_editor:not(.field_name
 .share-links .facebook-link{
     background-image: url(images/shareFacebook.png);
 }
+
 .index-item.is-private:after {
     content: " *";
     color: #b90;
+}
+
+.preview_uploaded_image {
+    max-width: 150px;
+    max-height: 150px;
 }
